# EyeMeter

./: .gitignore  README.md  TODO.md  run_eye_ai.sh
analyzer/: aihooks.py  bin_analyzer.py  daemon.py  dataset.py  dom.py  eye_analyzerd.py  eyemetercomm.py  get_pupil.py  inference_fin.py  lin_sharp_3.py  net.py  net_sharp.py  onnx_pupil_detection.py  postrpocessing_seg.py  prepare_image.py  refraction_utils.py  result_seg.py  rknn_pupil_detection.py  udsunicomm.py  utils.py
analyzer/neural_sharp_line/: net.py  net_sharp.py
analyzer/speedup/: jit_pretrace.py
eseircam/daemon/: CMakeLists.txt  EyeMeter  daemon_tools.h  esecamd.cpp
eseircam/test/: CMakeLists.txt  camtest.cpp
eseircam/test/TargetBuild/: settings.cmake  show.py
eyemetergui/: dateedit_clickable.cpp  dateedit_clickable.h  dateedit_keyboard.cpp  dateedit_keyboard.h  emtoolbar.cpp  emtoolbar.h  eyemetergui.pro  imagebuttons.cpp  imagebuttons.h  images.qrc  inputdatedialog.cpp  inputdatedialog.h  inputnamedialog.cpp  inputnamedialog.h  lineedit_clickable.cpp  lineedit_clickable.h  lineedit_keyboard.cpp  lineedit_keyboard.h  main.cpp  mainwindow.cpp  mainwindow.h  shotbuttons.cpp  shotbuttons.h  udsunisocket.cpp  udsunisocket.h
ipc/: aihooks.py  eye_shmem.cpp  eye_shmem.h  eyemetercomm.py  ipc_comm.cmake  shmem_alloc.cpp  shmem_alloc.h  shmem_read.py  threadsafe_queue.h  udsunicomm.cpp  udsunicomm.h  udsunicomm.py
led/: ledctlesp.py
led/esp/: .gitignore  (+2 more)
scripts/: EyeMeter  updater.py
types/: ai_types.h  cam_types.h  comm_types.h  emre_textlib.cpp  guitextlib.h  led_types.h  types_map.hpp
(+20 files in other folders)
